# quant-intel-brief

./: .env.example  .gitignore  AGENTS.md  PLANS.md  README.md  pyproject.toml
.codex/: config.toml
app/: __init__.py  main.py
app/collectors/: __init__.py  alphavantage.py  arxiv.py  base.py  finance_news_mcp.py  finnhub.py  fred.py  gdelt.py  github.py  newsapi.py  premium_browser.py  quantconnect.py  reddit.py  rss.py  sec_edgar.py  stackexchange.py  x_api.py  youtube.py
app/core/: __init__.py  config.py  llm_settings.py  logging.py  source_settings.py  timezones.py
app/db/: __init__.py  models.py  session.py
app/dedup/: __init__.py  canonicalize.py  clusterer.py
app/email/: __init__.py  resend_sender.py  sender.py  smtp_sender.py
app/enrichers/: __init__.py  asset_tagger.py  quant_tagger.py  ticker_extractor.py
app/extractors/: __init__.py  article_extractor.py  premium_extractor.py
docs/: CODEX_TASKS.md  DATA_SCHEMA.md  DATA_SOURCES.md  GOAL_MVP.md  LEGAL_BOUNDARIES.md  LLM_PROMPTS.md  PROJECT_SPEC.md  RUNBOOK.md
templates/: base.html  dashboard_today.html  email_report.html  feed.html  llm_settings.html  premium_sources.html  report_detail.html  reports.html  source_settings.html  source_status.html
tests/: __init__.py  test_ai_report_generation.py  test_collect_once.py  test_collectors.py  test_dashboard_routes.py  test_dedup.py  test_email_sender.py  test_enrichers.py  test_extraction_boundaries.py  test_jobs.py  test_llm_summarization.py  test_phase0_foundation.py  test_ranking.py  test_report_generation.py  test_scaffold.py  test_seed_demo.py
(+48 files in other folders)
