[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-intel-brief"
version = "0.1.0"
description = "Daily quantitative-finance intelligence brief pipeline and dashboard."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10",
  "beautifulsoup4>=4.12",
  "fastapi>=0.115",
  "feedparser>=6.0",
  "httpx>=0.27",
  "jinja2>=3.1",
  "mcp>=1.24,<2",
  "openai>=1.40",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-dateutil>=2.9",
  "python-dotenv>=1.0",
  "sqlmodel>=0.0.22",
  "typer>=0.12",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "ruff>=0.5",
  "mypy>=1.11",
]

[project.scripts]
quant-intel-brief = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
